<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string-array name="orderBy">
        <item>Descending Time</item>
        <item>Ascending Time</item>
        <item>Descending Magnitude</item>
        <item>Ascending Magnitude</item>
    </string-array>
    <string name="app_name">Quake Report</string>
    <string name="no_data_available">No Earthquakes Available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preference">Change your preferences</string>
    <string name="minMagText">Minimum Magnitude</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="defaultMag">1</string>
    <string name="maxMagText">Maximum Magnitude</string>
    <string name="settingsFile">com.example.earthquake.preferenceFile</string>
</resources>
